# ariadne

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE.md  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.pi/agent/agent-output/: response-split-plan.md
ariadne-vscode/: .eslintrc.cjs  README.md  package-lock.json  package.json
ariadne-vscode/src/: commands.ts  extension.ts  mcp.ts  resultPanel.ts  sidebar.ts  types.ts
crates/ariadne-cli/: Cargo.toml
crates/ariadne-cli/src/: main.rs
crates/ariadne-cli/static/: app.js  index.html  style.css
crates/ariadne-core/: Cargo.toml
crates/ariadne-core/src/: edge.rs  graph.rs  id.rs  lib.rs  node.rs
crates/ariadne-extract/: Cargo.toml
crates/ariadne-extract/src/: lib.rs  walker.rs
crates/ariadne-extract/src/ast/: cpp.rs  mod.rs  python.rs  rust.rs
crates/ariadne-extract/src/concept/: latex.rs  markdown.rs
crates/ariadne-extract/src/vision/: llm.rs  mod.rs  svg.rs
crates/ariadne-graph/: Cargo.toml
crates/ariadne-graph/benches/: extraction.rs  store_load.rs
crates/ariadne-graph/src/: lib.rs  main.rs  store.rs  tui.rs
crates/ariadne-graph/src/cli/: advanced.rs  analysis.rs  architecture.rs  basic.rs  counterfactual.rs  daemon.rs  flows.rs  git.rs  handlers.rs  helpers.rs  http.rs  impact.rs  mcp.rs  mod.rs  paths.rs  reports.rs  response.rs  reviews.rs  search.rs  serve.rs  temporal.rs  tool.rs
crates/ariadne-graph/src/cli/response/: analysis.rs  architecture.rs  cache.rs  hints.rs  impact.rs  mod.rs  paths.rs  reports.rs  reviews.rs  temporal.rs
crates/ariadne-graph/src/core/: edge.rs  graph.rs  mod.rs  node.rs
crates/ariadne-graph/src/extract/: flows.rs  mod.rs  test_detect.rs  walker.rs
crates/ariadne-graph/src/extract/ast/: cpp.rs  custom_lang.rs  language_registry.rs  languages.toml  mod.rs  python.rs  rust.rs  tsconfig_resolver.rs  typescript.rs
crates/ariadne-graph/src/extract/ast/languages/: cpp.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/ariadne-graph/src/extract/concept/: concept_registry.rs  document_utils.rs  html.rs  latex.rs  markdown.rs  mod.rs
crates/ariadne-graph/src/extract/vision/: llm.rs  mod.rs  svg.rs
crates/ariadne-graph/src/extract/walker/: call_resolution.rs  exclusions.rs  mod.rs  suppress_list.rs
crates/ariadne-graph/src/interfaces/: mod.rs
crates/ariadne-graph/src/interfaces/cli/: build.rs  git.rs  handlers.rs  http.rs  mcp.rs  mod.rs  report.rs  search.rs  structure.rs  tool.rs  watch.rs
crates/ariadne-graph/src/interfaces/cli/response/: analysis.rs  architecture.rs  cache.rs  context.rs  flows.rs  impact.rs  mod.rs  paths.rs  reviews.rs  search.rs  temporal.rs
crates/ariadne-graph/src/query/: centrality.rs  communities.rs  counterfactual.rs  dedup.rs  differential.rs  export.rs  impact.rs  mod.rs  motifs.rs  paths.rs  refactor.rs  search.rs  semsearch.rs  structure.rs
crates/ariadne-graph/src/query/communities/: gaps.rs  infomap.rs  leiden.rs  louvain.rs  mod.rs  quality.rs  split.rs
crates/ariadne-graph/src/query/dedup/: lsh.rs  minhash.rs  mod.rs  union_find.rs
crates/ariadne-graph/src/query/search/: fusion.rs  fuzzy.rs  mod.rs  vocabulary.rs
crates/ariadne-graph/src/store/: db.rs  embedding.rs  mod.rs  query.rs  tests.rs
crates/ariadne-graph/src/store/db/: mod.rs  schema.rs
crates/ariadne-graph/src/tui/: app.rs  mod.rs  render.rs  theme.rs
crates/ariadne-graph/tests/: integration_test.rs
crates/ariadne-graph/tests/fixtures/: sample.py  sample.rs
crates/ariadne-query/: Cargo.toml
crates/ariadne-query/src/: centrality.rs  communities.rs  counterfactual.rs  differential.rs  impact.rs  lib.rs  motifs.rs  paths.rs  search.rs  structure.rs
crates/ariadne-store/: Cargo.toml
crates/ariadne-store/src/: lib.rs
examples/: self_demo.sh
