[package]
name = "ariadne-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ariadne-core"
readme.workspace = true
rust-version.workspace = true
description = "Core graph types and in-memory store for Ariadne."

[dependencies]
petgraph    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }

# MSRV pins for Rust 1.75 — newer transitive deps require edition2024 or 1.80+.
# These are not used in code; declaring them constrains the resolver.
indexmap   = "=2.6.0"
hashbrown  = "=0.15.2"
rayon-core = "=1.12.1"
