[package]
name = "ariadne-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ariadne-extract"
readme.workspace = true
rust-version.workspace = true
description = "Extraction passes: AST (tree-sitter), prose, and vision/LLM."

[dependencies]
ariadne-core       = { workspace = true }
tree-sitter        = { workspace = true }
tree-sitter-rust   = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-cpp    = { workspace = true }
walkdir            = { workspace = true }
rayon              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
serde_json         = { workspace = true }
