[package]
name = "ariadne-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ariadne-graph"
readme.workspace = true
rust-version.workspace = true
description = "Graph-based semantic system for code, documents, and diagrams. CLI and MCP server."

[[bin]]
name = "ariadne"
path = "src/main.rs"

[lib]
name = "ariadne_graph"
path = "src/lib.rs"

[dependencies]
petgraph = { workspace = true }
rusqlite = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-typescript = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
regex = { workspace = true }
pulldown-cmark = { workspace = true }
# HTML parsing — 0.26 works on Rust 1.75; 0.27 needs 1.80+.
html5ever = "0.26"
markup5ever_rcdom = "0.2.0"
# 6.x rather than 7+/8+: newer majors raise MSRV above the 1.75 pin.
notify = "6.1"
jaro_winkler = "0.2.1"
unicode-normalization = "0.1.25"

toml = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

# MSRV pins for Rust 1.75 — newer transitive deps require edition2024 or 1.80+.
# These constrain the resolver; they are not used directly in code.
indexmap = "=2.6.0"
hashbrown = "=0.15.2"
rayon-core = "=1.12.1"
siphasher = "1.0.3"
# criterion 0.5's cargo_bench_support/plotters chain pulls these; pin below
# their MSRV-1.75-breaking versions (half 2.5+ / is-terminal 0.4.10+ raise MSRV).
half = "=2.4.1"
is-terminal = "=0.4.9"

[[bench]]
name = "store_load"
harness = false

[[bench]]
name = "extraction"
harness = false
