[package]
name = "ariadne-query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ariadne-query"
readme.workspace = true
rust-version.workspace = true
description = "Query and reasoning kernel for Ariadne: paths, centrality, communities, motifs."

[dependencies]
ariadne-core = { workspace = true }
petgraph     = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
