[package]
name = "ariadne-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ariadne-store"
readme.workspace = true
rust-version.workspace = true
description = "SQLite-backed persistence for the Ariadne graph."

[dependencies]
ariadne-core = { workspace = true }
rusqlite     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
